@@ -1,5 +1,8 @@
 CHANGE LOG / RELEASE NOTES: (Newest to Oldest)
 
+A21.2.001.0027 :
+* Alternative brown pallet boxes, more random rotations.
+
 A21.2.001.0026 :
 * New coffeemakers, soda machines, beer coolers from Stallion.
 
